fix gap div

--- a/css/style.css
+++ b/css/style.css
@@ -64,12 +64,10 @@ header p {
 .box {
   background: white;
   padding: 20px;
-
   border-radius: 12px;
-
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-
   overflow: auto;
+  margin-bottom: 20px;
 }
 
 .box h3 {
@@ -110,7 +108,6 @@ canvas {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-  margin-top: 20px;
   margin-bottom: 20px;
 }
 
@@ -227,19 +224,15 @@ canvas {
 ======================================= */
 
 @media (max-width: 1200px) {
-
   .cards-listagem {
     grid-template-columns: 1fr;
   }
-
 }
 
 @media (max-width: 900px) {
-
   .painel {
     grid-template-columns: 1fr;
   }
-
 }
 @media (max-width: 900px) {
   .painel {
